# GenAI-basics

./: .gitignore  requirements.txt
LangGraph/: basic_graph.py
LangGraph/checkpointing/: graph.py  main.py  support.py
RAG/: HyDE.py  docker-compose.qdrant.yaml  parallel_query.py  query_decomposition.py  query_routing.py  query_translation.py  rag_basic.py  reciprocate_rank_fusion.py  step_back_prompting.py
ai_voice_vibe_coder/: graph.py  main.py  pyproject.toml
fine_tuning/: cursor.py  ollama_tool.py  requirements.txt  tooling.py
fine_tuning/unsloth_fine_tune/: unsloth_ollama_fine_tuning.ipynb  unsloth_ollama_fine_tuning.py
intro & basics/: assign.py  chat-COT-prompt.py  chat-CP.py  chat-gemini.py  chat.py  prompting.md
mcp/manage_bookmark_mcp/: .env.example  package.json  pnpm-lock.yaml
mcp/manage_bookmark_mcp/prisma/: dev.db  schema.prisma
mcp/manage_bookmark_mcp/src/app/: layout.tsx  page.tsx
mcp/manage_bookmark_mcp/src/app/.well-known/oauth-protected-resource/: route.ts
mcp/manage_bookmark_mcp/src/app/[transport]/: route.ts
mcp/manage_bookmark_mcp/src/app/api/bookmarks/: route.ts
mcp/manage_bookmark_mcp/src/app/api/bookmarks/[id]/: route.ts
mcp/manage_bookmark_mcp/src/components/: BookmarkCard.tsx  BookmarkForm.tsx  BookmarkList.tsx
mcp/manage_bookmark_mcp/src/hooks/: useBookmarks.ts
mcp/manage_bookmark_mcp/src/lib/: bookmark-utils.ts
mcp/weather_mcp_js/: package-lock.json  package.json
neo4j/: mem.py
openai_agents/: index.js  package.json  pnpm-lock.yaml
website-chatbot/: main.py  pyproject.toml
