[project]
name = "ai-vibe-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-mongodb>=0.2.0",
    "openai[voice-helpers]>=1.105.0",
    "pyaudio>=0.2.14",
    "pymongo>=4.14.1",
    "speechrecognition>=3.14.3",
]
