[project]
name = "website-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-qdrant>=0.2.1",
    "lxml>=6.0.1",
]
